--- a/style.css
+++ b/style.css
@@ -16,8 +16,7 @@ body {
     gap: 20px;
     height: 100vh;
     flex-flow: column;
-    margin-top: 80px;
-    background-color: rgb(73, 73, 73);
+    background-color: rgb(37, 37, 37)
 }
 .numberBox{
     height: 100px;
@@ -27,11 +26,10 @@ body {
 }
 
 .container{
-    height: 600px;
     width: 600px;
     display: grid;
     grid-template-columns: repeat(4,100px);
-    grid-template-rows: repeat(5,100px);
+    grid-template-rows: repeat(4,100px);
     margin-left: 200px;
 }
 
@@ -67,9 +65,10 @@ button:hover{
 
 .body-container{
     width: 400px;
-    height: 600px;
+    height: 500px;
     display: flex;
     flex-flow: column;
     justify-content: center;
     align-items: center;
+    box-shadow: 0px 0px 10px white;
 }
